# gis-shapefile

./: .aiexclude  .claudeignore  .env  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  LOGGING-SOLUTION.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  logging-implementation.md  logging-report.md  output.md
.claude/: CLAUDE.md  config.yaml  context.md  settings.json  settings.local.json
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/workflows/: ci.yml
data/: README.md  addresses.csv  poi.geojson
docs/: architecture.md  correlation-solution.md  full-original-doc.txt
elk-services/: .env.apache  .env.example  .env.simple  CLAUDE.md  README.md  docker-compose.yml  test-compose.yml  test.env
elk-services/.claude/: settings.local.json
elk-services/config/elasticsearch/: elasticsearch.yml
elk-services/config/filebeat/: filebeat.yml
elk-services/config/kibana/: kibana.yml
elk-services/config/kibana/saved_objects/: index-patterns.ndjson
elk-services/config/logstash/: logstash.yml
elk-services/config/logstash/pipeline/: application-logs.conf  generic-logs.conf
elk-services/scripts/: cleanup.sh  configure-kibana-analytics.sh  deploy.sh  logs.sh  restart.sh  setup-kibana.sh
examples/: basic_usage.cpp  performance_demo.cpp
include/: CLAUDE.md
include/gis/: dbf_reader.h  geocoder.h  geometry.h  shapefile_reader.h  spatial_index.h
log-services/: CLAUDE.md  README-Logging.md  README.md
log-services/config/: logging.yaml
log-services/include/: correlation_id.h  logger.h
logging-solution/: ELK-DEPLOYMENT-STATUS.md  README-Logging.md  README.md  debug-logs.py  deploy-logging.sh  docker-compose.yml
logging-solution/elk-config/elasticsearch/: elasticsearch.yml
logging-solution/elk-config/kibana/: kibana.yml
logging-solution/elk-config/logstash/: logstash.conf  logstash.yml
logging-solution/include/gis/: correlation_id.h  logger.h
logging-solution/src/logging/: correlation_id.cpp  logger.cpp
plogger/: CLAUDE.md  DEPLOYMENT-GUIDE.md  ELK-DEPLOYMENT-STATUS.md  README-Logging.md  README.md  deploy-logging.sh
plogger/config/: logging.yaml
plogger/elk-infrastructure/: DEPLOYMENT-GUIDE.md  test-elk-integration.py
plogger/elk-infrastructure/elk-config/filebeat/: filebeat.yml
plogger/elk-infrastructure/kibana-dashboards/: gis-monitoring-dashboard.json
plogger/include/: logger.h
plogger/src/: correlation_id.cpp  logger.cpp
pxpoint/: CLAUDE.md  CMakeLists.txt  DummyParcelBuilderNew.cs  DummyParcelBuilderNew.csproj  PxPointCorrelation.cs  PxPointLogger.cs  README.md  dummy_parcel_processor.cpp  pxpoint_correlation.cpp  pxpoint_correlation.h  pxpoint_logger.cpp  pxpoint_logger.h  test_integration.sh  test_multi_process.sh
pxpoint/cpp/: CMakeLists.txt  dummy_parcel_processor.cpp
pxpoint/cpp/log-services/: README.md
pxpoint/cpp/log-services/cmake/: log-services-config.cmake.in
pxpoint/cpp/log-services/config/: logging.yaml
pxpoint/cpp/log-services/examples/: CMakeLists.txt  custom_config_example.cpp  orchestrator_process.cpp
pxpoint/cpp/log-services/include/: correlation_manager.h  structured_logger.h
pxpoint/cpp/log-services/tests/: CMakeLists.txt  test_integration.cpp  test_main.cpp  test_structured_logger.cpp
pxpoint/cs/: DummyParcelBuilderNew.csproj
pxpoint/cs/log-services/: LogServices.csproj  README.md
pxpoint/cs/log-services-tests/: ActivityCorrelationScopeTests.cs  CorrelationManagerTests.cs  LogServices.Tests.csproj  PerformanceTimerTests.cs  ProcessCorrelationScopeTests.cs  StructuredLoggerTests.cs
pxpoint/cs/log-services/config/: logging.json
pxpoint/cs/log-services/examples/: ConfigurationExample.cs  MultiProcessExample.cs
pxpoint/cs/log-services/src/: CorrelationManager.cs  StructuredLogger.cs
pxpoint/elk-services/: .env  CLAUDE.md  README.md  docker-compose.yml
pxpoint/elk-services/config/elasticsearch/: elasticsearch.yml
pxpoint/elk-services/config/filebeat/: filebeat.yml
pxpoint/elk-services/config/kibana/: kibana.yml
pxpoint/elk-services/config/logstash/pipeline/: generic-logs.conf
pxpoint/elk-services/scripts/: CLAUDE.md  deploy.sh  status.sh  stop.sh
pxpoint/elk-services/scripts/tools/: configure-kibana-analytics.sh  test-correlation-tracking.sh
pxpoint/log-services/: CMakeLists.txt  README.md
pxpoint/log-services-dotnet/: README.md
pxpoint/log-services-dotnet/config/: README.md  correlation.json
pxpoint/log-services-dotnet/examples/: MultiProcessExample.cs
pxpoint/log-services/config/: logging-development.yaml  logging-production.yaml  logging.yaml
pxpoint/log-services/examples/: basic_logging_example.cpp  performance_example.cpp  worker_process.cpp
pxpoint/log-services/include/: structured_logger.h
pxpoint/log-services/src/: correlation_manager.cpp  structured_logger.cpp
pxpoint/log-services/tests/: test_correlation_manager.cpp  test_integration.cpp  test_structured_logger.cpp
server/: CLAUDE.md  http_server.cpp  http_server.h  main.cpp
src/: CMakeLists.txt  GEMINI.md
src/geocoding/: geocoder.cpp
src/shapefile/: dbf_reader.cpp  geometry.cpp  shapefile_reader.cpp
src/spatial/: spatial_index.cpp
tests/: test_geocoder.cpp  test_shapefile_reader.cpp  test_spatial_index.cpp
tools/: geocoder_cli.cpp  shp_info.cpp  spatial_query.cpp
